<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    tools:context=".presentation.nativeotp.NativeOTPFragment">


    <LinearLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="4dp"
                android:src="@drawable/ic_back_arrow"
                app:tint="@color/black_text_80" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/go_back"
                android:textColor="@color/black_text_80"
                android:textFontWeight="600"
                android:textSize="14sp" />

        </LinearLayout>


        <ImageView
            android:layout_width="112dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_otp_verify_screen" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/enter_otp_to_complete_payment"
            android:textColor="@color/black_text"
            android:textFontWeight="600"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/otp_sent_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/otp_sent_to_the_mobile_linked_to_your_bank"
            android:textColor="@color/black_text_60"
            android:textFontWeight="600"
            android:textSize="12sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/black_field_border"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            android:paddingStart="16dp">

            <EditText
                android:id="@+id/otp_input_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/enter_otp"
                android:minWidth="130dp"
                android:maxLines="1"
                android:inputType="number"
                android:textColor="@color/black_text"
                android:textColorHint="@color/black_text_30"
                android:textFontWeight="700"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/resent_otp_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/resend_otp_in" />

        </LinearLayout>

        <TextView
            android:id="@+id/auto_read_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_auto_read"
            android:drawablePadding="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/waiting_to_auto_read_otp"
            android:textColor="@color/black_text"
            android:textFontWeight="500"
            android:textSize="13sp" />


        <TextView
            android:id="@+id/error_message_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_error_icon"
            android:drawablePadding="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/wrong_otp_please_re_enter"
            android:textColor="@color/error_DD4D42"
            android:textFontWeight="500"
            android:textSize="13sp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/primary_button_disabled_bg"
            android:enabled="false"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/verify_pay"
            android:textColor="@color/text_disabled_C0C9D2" />

        <TextView
            android:id="@+id/bank_Website_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/or_complete_payment_on_your" />


    </LinearLayout>

</ScrollView>