<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    tools:context=".presentation.nativeotp.NativeOTPFragment">


    <LinearLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="4dp"
                android:src="@drawable/ic_back_arrow"
                app:tint="@color/black_text_80" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/go_back"
                android:textColor="@color/black_text_80"
                android:textFontWeight="600"
                android:textSize="14sp" />

        </LinearLayout>


        <ImageView
            android:layout_width="112dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_otp_verify_screen" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/verify_mobile_number"
            android:textColor="@color/black_text"
            android:textFontWeight="600"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/customer_send_otp_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/save_card_verify_msg"
            android:textColor="@color/black_text_60"
            android:textFontWeight="600"
            android:textSize="12sp" />


        <com.plural_pinelabs.expresscheckoutsdk.common.OtpInputView
            android:id="@+id/otp_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxSpacing="8dp"
            app:otpCursorVisible="false"
            app:otpDigits="6"
            app:otpTextColor="@android:color/black"
            app:otpTextSize="24sp"
            app:otpTextStyle="bold" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/resend_otp_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/resend_otp_in"
                android:textColor="@color/black_text_50"
                android:textFontWeight="600"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/skip_card_saved_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/skip_saving_card"
                android:textColor="@color/black_text_80"
                android:textFontWeight="600"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/resend_otp_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/resend_otp"
                android:textColor="@color/black_text_80"
                android:textFontWeight="600"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnusedAttribute" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/information_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="32dp"
            android:drawableStart="@drawable/ic_info_icon"
            android:drawablePadding="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/saved_card_otp_information"
            android:textColor="@color/black_text_50"
            android:textFontWeight="400"
            android:textSize="12sp"
            tools:ignore="UseCompatTextViewDrawableXml" />


        <TextView
            android:id="@+id/error_message_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_error_icon"
            android:drawablePadding="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/wrong_otp_please_re_enter"
            android:textColor="@color/error_DD4D42"
            android:textFontWeight="500"
            android:textSize="13sp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/primary_button_background"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/verify"
            android:textColor="@color/white" />


    </LinearLayout>

</ScrollView>