<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    tools:context=".presentation.d2c.PhoneNumberFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/verify_mobile_number"
        android:textColor="@color/black_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sent_phone_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:drawableEnd="@drawable/ic_edit"
        android:drawablePadding="4dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/enter_the_otp_sent_to"
        android:textColor="@color/black_text"
        android:textSize="12sp"
        tools:ignore="UseCompatTextViewDrawableXml" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">


        <com.plural_pinelabs.expresscheckoutsdk.common.OtpInputView
            android:id="@+id/otp_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxSpacing="8dp"
            app:otpCursorVisible="false"
            app:otpDigits="6"
            app:otpTextColor="@android:color/black"
            app:otpTextSize="24sp"
            app:otpTextStyle="bold" />

        <TextView
            android:id="@+id/resend_otp_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/resend_otp_in"
            android:textColor="@color/black_text_50"
            android:textFontWeight="600"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

    <TextView
        android:id="@+id/information_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/ic_info_icon"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/to_proceed_please_verify_your_mobile_number"
        android:textColor="@color/black_text_50"
        android:textFontWeight="400"
        android:textSize="12sp"
        tools:ignore="UseCompatTextViewDrawableXml" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verify_otp_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/primary_button_disabled_bg"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/verify"
        android:textColor="@color/text_disabled_C0C9D2" />

</LinearLayout>