<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="32dp"
    android:layout_marginBottom="4dp"
    tools:context=".presentation.d2c.SavedAddressFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/select_delivery_address"
        android:textColor="@color/black_text"
        android:textFontWeight="600"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/add_new_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_new_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/primary_button_disabled_bg"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:text="@string/add_new"
        android:textColor="@color/black_text"
        android:textFontWeight="600"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/address_list_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/continue_btn"
        app:layout_constraintTop_toBottomOf="@id/add_new_btn"
        tools:itemCount="5"
        tools:listitem="@layout/saved_address_item" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/primary_button_background"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/continue_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>